@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017 - 2018, The casual project. All rights reserved.
+ * Copyright (c) 2017 - 2024, The casual project. All rights reserved.
  *
  * This software is licensed under the MIT license, https://opensource.org/licenses/MIT
  */
@@ -13,7 +13,6 @@ import java.io.Serializable;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public final class PojoWithMappableFieldList implements Serializable
 {
@@ -37,7 +36,7 @@ public final class PojoWithMappableFieldList implements Serializable
 
     public List<LocalDate> getDates()
     {
-        return dates.stream().collect(Collectors.toList());
+        return dates.stream().toList();
     }
 
     @Override
