@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017 - 2018, The casual project. All rights reserved.
+ * Copyright (c) 2017 - 2024, The casual project. All rights reserved.
  *
  * This software is licensed under the MIT license, https://opensource.org/licenses/MIT
  */
@@ -10,7 +10,6 @@ import se.laz.casual.api.queue.QueueMessage;
 import se.laz.casual.network.protocol.messages.queue.DequeueMessage;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public final class Transformer
 {
@@ -20,7 +19,7 @@ public final class Transformer
     {
         return l.stream()
                 .map(Transformer::transformMessage)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static QueueMessage transformMessage(final DequeueMessage msg)
